--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ min-height: 100vh;
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav m-auto">
                   <li class="nav-item ">
-                    <a class="nav-link text-dark" href="ThemeHub.html"><b>Home</b></a>
+                    <a class="nav-link text-dark" href="index.html"><b>Home</b></a>
                   </li>
                   <li class="nav-item ">
                     <a class="nav-link text-dark" href="#about"><b>About</b></a>
