--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title><img id="im" src="./photos/Theme.png" width="10px" height="10px">ThemeHub</title>
+    <title><img src="./photos/Theme.png" width="20px" height="20px">ThemeHub</title>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -454,8 +454,8 @@ Contact us
 <div class="offset-sm-2 col-sm-8">
 <form>
 
-<div class="shadow-lg p-5 bg-dark text-light text-center" style="font-size:18px;"><p style="color:grey;font-weight:bold;font-size:20px;">Do you liked our templates? OR<br>Do you find them boring? OR<br>What to appreciate for our hardwork?</p>
-                                                Your feedback is most important to us. Do mail us at the given mail id.<br><br>" hubtheme1004@gmail.com. "<br><br>
+<div class="shadow-lg p-5 bg-dark text-light text-center" style="font-size:18px;"><p style="color:grey;font-weight:bold;font-size:20px;">Did you like our templates?<br>Did you find them boring?<br>Want to appreciate for our hardwork?</p>
+                                                Your feedback is most important to us. Do mail us at the given mail id.<br><br><a href="mailto:hubtheme1004@gmail.com" >" hubtheme1004@gmail.com. "</a><br><br>
 
                                                 Kindly<a href="mailto:hubtheme1004@gmail.com" > CLICK HERE </a>to open directly.
 </div>
