--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ min-height: 100vh;
 
     <div>
             <nav style="background-color:white;" class="navbar navbar-expand-sm fixed-top">
-              <img id="im" src="./photos/Theme.png" width="100px" height="100px">
+              <img src="./photos/Theme.png" width="100px" height="100px">
 
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <i class="fas fa-bars" ></i>
