--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
   {
     transition: all 0.3s linear;
   }
+  @viewport{
+    zoom:1.0;
+    width:extend-to-zoom;
+  }
+  @-ms-viewport
+    {
+      width:extend-to-zoom;
+       zoom:1.0;
+    }
   body
   {
     font-family: "Times New Roman", Georgia, Serif;
