--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ min-height: 100vh;
 
     <div>
             <nav style="background-color:white;" class="navbar navbar-expand-sm fixed-top">
-              <img src="./photos/Theme.png" width="100px" height="100px">
+              <a href="index.html"><img src="./photos/Theme.png" width="100px" height="100px"></a>
 
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <i class="fas fa-bars" ></i>
@@ -209,7 +209,7 @@ min-height: 100vh;
                     <a class="nav-link text-dark" href="#about"><b>About</b></a>
                   </li>
                   <li class="nav-item ">
-                    <a class="nav-link text-dark"  href="#temp"><b>Themes & Templates</b></a>
+                    <a class="nav-link text-dark"  href="second.html"><b>Themes & Templates</b></a>
                   </li>
                   <li class="nav-item ">
                     <a class="nav-link text-dark" href="#contact"><b>Contact Us</b></a>
