--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- <link rel="stylesheet" href="style.css"> -->
   <link rel="stylesheet" href="./fullpage.min.css">
-  <title><img src="./photos/Theme.png" width="20px" height="20px">ThemeHub</title>
+  <title>ThemeHub</title>
   </head>
   <style>
   *
