--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ min-height: 100vh;
 
     <div>
             <nav style="background-color:white;" class="navbar navbar-expand-sm fixed-top">
-              <a href="index.html"><img src="./photos/Theme.png" width="100px" height="100px"></a>
+              <a href="themehub.html"><img src="./photos/Theme.png" width="100px" height="100px"></a>
 
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <i class="fas fa-bars" ></i>
@@ -203,7 +203,7 @@ min-height: 100vh;
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav m-auto">
                   <li class="nav-item ">
-                    <a class="nav-link text-dark" href="index.html"><b>Home</b></a>
+                    <a class="nav-link text-dark" href="themehub.html"><b>Home</b></a>
                   </li>
                   <li class="nav-item ">
                     <a class="nav-link text-dark" href="#about"><b>About</b></a>
