--- a/second.html
+++ b/second.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
               <ul class="navbar-nav m-auto">
                 <li class="nav-item ">
-                  <a class="nav-link text-dark" href="ThemeHub.html"><b>Home</b></a>
+                  <a class="nav-link text-dark" href="index.html"><b>Home</b></a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link text-dark"  href="#"><b>Themes & Templates</b></a>
