--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ Contact us
 </div>
 </section>
                 <footer class="text-center text-light p-32" style="background-color:black; width: 100%; height: 80px;padding: 30px;">
-                  <p>Powered by <a href="#" target="_blank" class="hover-text-dark text-light">ThemeHub.com</a></p>
+                  <p>Powered by <a href="#" target="_blank" class="hover-text-dark text-light">ThemeHub</a></p>
                 </footer>
 
 
