--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ Templates
 
 <div class="container-fluid">
 <br><br><br><br><br><br>
-<h1 class="moveTextUp1 display-3 text-sm-center font-weight-bold ">Themes & Templates</h1>
+<h1 class="moveTextUp1 display-3 text-center font-weight-bold ">Themes & Templates</h1>
 
 
             <hr style="margin:auto;width:50%;background-color:black;" >
@@ -385,7 +385,7 @@ ABOUT WEBSITE
 
 <div id="about" style="padding-bottom: 80%;">
   <br><br><br><br>
-  <h1 class="moveTextUp display-3 text-sm-center font-weight-bold ">About Us</h1>
+  <h1 class="moveTextUp display-3 text-center font-weight-bold ">About Us</h1>
       <!-- <span class="heading display-3 font-weight-bold moveTextUp" style="color:#333333;" ><center>About   Us</center></span> -->
   
         <div class="container">
@@ -451,7 +451,7 @@ Contact us
 <div class="row">
 <div class="col-sm-12">
 <div class="headerText text-center">
-  <h1 class="moveTextUp2 display-3 text-sm-center font-weight-bold ">Contact Us</h1>
+  <h1 class="moveTextUp2 display-3 text-center font-weight-bold ">Contact Us</h1>
   <!-- <span class="heading" style="color:#333333;" ><center><b>Contact&nbsp;Us</b></center></span> -->
           <hr style="margin:auto;width:50%;background-color:black;" >
           <br><br><br><br><br>
