--- a/index.html
+++ b/index.html
@@ -416,13 +416,13 @@ ABOUT WEBSITE
             </div>
         </div>
   
-            <div class="col-sm-3 card" >
+<!--             <div class="col-sm-3 card" >
               <img src="./photos/Aman.jpg" class="card-img-top img-fluid d-block">
               <div class="card-body text-center">
                 <p class="heading card-title" style="font-size:40px;color:#363636;">Amandeep</p>
                 <p class="card-text" style="color:grey;">Web Designer <br> deep.aman2672@gmail.com</p>
-            </div>
-        </div>
+            </div> -->
+<!--         </div> -->
   
   
           <div class="col-sm-3 card" >
