--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ ABOUT WEBSITE
     <div class=" row m-5">
   
             <div class="col-sm-3 card" >
-            <img src="./photos/nitika1.jpg" class="card-img-top img-fluid d-block">
+<!--             <img src="./photos/nitika1.jpg" class="card-img-top img-fluid d-block"> -->
               <div class="card-body text-center">
                 <p class=" heading card-title" style="font-size:40px;color:#363636;">Nitika Kathuria</p>
                 <p class="card-text" style="color:grey;">Web Designer <br> nitikakathuria11@gmail.com</p>
@@ -426,7 +426,7 @@ ABOUT WEBSITE
   
   
           <div class="col-sm-3 card" >
-            <img src="./photos/divya1.jpg" class="card-img-top img-fluid d-block">
+<!--             <img src="./photos/divya1.jpg" class="card-img-top img-fluid d-block"> -->
             <div class="card-body text-center">
               <p class="heading card-title"  style="font-size:40px;color:#363636;">Divya Gupta</p>
               <p class="card-text" style="color:grey;">Web Designer <br> itsmedivyagupta@gmail.com </p>
@@ -435,7 +435,7 @@ ABOUT WEBSITE
   
   
           <div class="col-sm-3 card" >
-            <img src="./photos/anisha.jpg" class="card-img-top img-fluid d-block">
+<!--             <img src="./photos/anisha.jpg" class="card-img-top img-fluid d-block"> -->
             <div class="card-body text-center">
               <p class="heading card-title" style="font-size:40px;color:#363636;">Anisha Jindal</p>
               <p class="card-text" style="color:grey;">Web Designer <br> anishajindal1203@gmail.com </p>
