--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ ABOUT WEBSITE
   
   
     <div class=" row m-5">
-  
+      <div class="col-sm-1"></div>
             <div class="col-sm-3 card" >
 <!--             <img src="./photos/nitika1.jpg" class="card-img-top img-fluid d-block"> -->
               <div class="card-body text-center">
@@ -441,6 +441,8 @@ ABOUT WEBSITE
               <p class="card-text" style="color:grey;">Web Designer <br> anishajindal1203@gmail.com </p>
            </div>
       </div>
+      
+       <div class="col-sm-1"></div>
     </div>
   <br><br><br><br><br><br><br><br><br><br>
   </div>
