--- a/index.html
+++ b/index.html
@@ -407,26 +407,25 @@ ABOUT WEBSITE
   
   
     <div class=" row m-5">
-      <div class="col-sm-1"></div>
             <div class="col-sm-3 card" >
-<!--             <img src="./photos/nitika1.jpg" class="card-img-top img-fluid d-block"> -->
+            <img src="./photos/nitika1.jpg" class="card-img-top img-fluid d-block">
               <div class="card-body text-center">
                 <p class=" heading card-title" style="font-size:40px;color:#363636;">Nitika Kathuria</p>
                 <p class="card-text" style="color:grey;">Web Designer <br> nitikakathuria11@gmail.com</p>
             </div>
         </div>
   
-<!--             <div class="col-sm-3 card" >
+            <div class="col-sm-3 card" >
               <img src="./photos/Aman.jpg" class="card-img-top img-fluid d-block">
               <div class="card-body text-center">
                 <p class="heading card-title" style="font-size:40px;color:#363636;">Amandeep</p>
                 <p class="card-text" style="color:grey;">Web Designer <br> deep.aman2672@gmail.com</p>
-            </div> -->
-<!--         </div> -->
+            </div>
+        </div>
   
   
           <div class="col-sm-3 card" >
-<!--             <img src="./photos/divya1.jpg" class="card-img-top img-fluid d-block"> -->
+            <img src="./photos/divya1.jpg" class="card-img-top img-fluid d-block"> 
             <div class="card-body text-center">
               <p class="heading card-title"  style="font-size:40px;color:#363636;">Divya Gupta</p>
               <p class="card-text" style="color:grey;">Web Designer <br> itsmedivyagupta@gmail.com </p>
@@ -435,14 +434,13 @@ ABOUT WEBSITE
   
   
           <div class="col-sm-3 card" >
-<!--             <img src="./photos/anisha.jpg" class="card-img-top img-fluid d-block"> -->
+            <img src="./photos/anisha.jpg" class="card-img-top img-fluid d-block">
             <div class="card-body text-center">
               <p class="heading card-title" style="font-size:40px;color:#363636;">Anisha Jindal</p>
               <p class="card-text" style="color:grey;">Web Designer <br> anishajindal1203@gmail.com </p>
            </div>
       </div>
-      
-       <div class="col-sm-1"></div>
+     
     </div>
   <br><br><br><br><br><br><br><br><br><br>
   </div>
